volexc/tests/ui/parse_error_recovery.out
Error: found 'y' expected ';'
   ╭─[ parse_error_recovery.vol:4:5 ]
   │
 4 │     y: f32;
   │     ┬  
   │     ╰── Unexpected 'y'
   │ 
   │ Note: Expected one of: ';'
───╯