volexc/tests/ui/parse_error_recovery.vol
// Test error recovery - parser should report all errors, not just the first
struct Point {
    x: f32
    y: f32;
    z: f32;
}

enum Status {
    Active = 0
    Inactive = 1;
}

message Request {
    id: u32 = 1
    name: string = 2;
}
